tests/unit/default/syntax-error/200-data.x.t
---- IN ----
=|
---- OUT ----
---- ERR ----
syntax: expected EOL after `=` near `|` at position 1 - at line 1
---- EXIT ----
1
